--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,11 +16,11 @@ swagger {
 }
 
 db {
-    jdbcDriver = "org.postgresql.Driver"
-    jdbcUrl = "jdbc:postgresql://localhost:45533/dev_mem"
-    dbUser = "dev"
-    dbPassword = "dev"
-    maxPoolSize = 5
+   jdbcDriver = "org.postgresql.Driver"
+      jdbcUrl = "jdbc:postgresql://localhost:5432/new_db"
+      dbUser = "postgres"
+      dbPassword = "postgres"
+      maxPoolSize = 5
 }
 
 flyway {
