--- a/src/main/resources/test.conf
+++ b/src/main/resources/test.conf
@@ -17,12 +17,12 @@ swagger {
 
 db {
     jdbcDriver = "org.postgresql.Driver"
-    jdbcUrl = "jdbc:postgresql://localhost:45533/dev_mem"
-    dbUser = "dev"
-    dbPassword = "dev"
-    maxPoolSize = 5
+       jdbcUrl = "jdbc:postgresql://localhost:5432/new_db"
+       dbUser = "postgres"
+       dbPassword = "postgres"
+       maxPoolSize = 5
 }
 
 flyway {
-    clean = true
+    clean = false
 }
